--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 
   <!-- HEADER -->
   <div class="top">
-    <h1>Exoticz Market</h1>
-    <p>Private Menu · UTR, NL</p>
+    <h1>Cannasseur Shop</h1>
+    <p>Private Menu · BER, DE</p>
   </div>
 
   <!-- CATEGORY -->
